# yaHexBitAnalysis

./: CMakeLists.txt  README.org
src/: main.cpp
src/model/: datamodel.cpp  datamodel.h
src/widget/: binarywidget.cpp  binarywidget.h
test/: CMakeLists.txt  datatest.cpp  datatest.h
