#project(test LANGUAGES CXX)

#find_package(Qt6 REQUIRED COMPONENTS Test)

#set(CMAKE_INCLUDE_CURRENT_DIR ON)

#set(CMAKE_AUTOMOC ON)

#enable_testing(true)

#add_executable(test
#    datatest.h
#    datatest.cpp)

#add_test(NAME test COMMAND test)

#target_link_libraries(test PRIVATE Qt::Test)

#set(PROJECT_SOURCES
#    test/datatest.h
#    test/datatest.cpp
#)
